# All_agents_common_frontned

./: .gitignore  README.md  host.py  pyproject.toml  requirements.txt
agent_structure/: pipeline.py  state.py
agent_structure/Relevence_checker/: relevence_checker.py  relevnce.txt
agent_structure/URl_finder/: filter_agent.py  find_urls.json  news_data.py  tavily_api.py  tavily_results.json  tools.py
agent_structure/URl_scrapper_parcer/: url_scrapper_parcer.py
agent_structure/duplication/: duplication.py
agent_structure/summarizer/: summarizer.py
